<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZjN-z1-rtd">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--First View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="FirstViewController" customModule="FastlaneStudy" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1zY-EA-BgN">
                                <rect key="frame" x="187.5" y="433" width="39" height="30"/>
                                <state key="normal" title="첫번째"/>
                                <connections>
                                    <segue destination="9jh-eI-Ht0" kind="show" id="I1W-tU-shX"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="1zY-EA-BgN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RGc-BX-xwN"/>
                            <constraint firstItem="1zY-EA-BgN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pPS-9n-Sle"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="S4x-WW-JdK"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
        </scene>
        <!--Second View Controller-->
        <scene sceneID="xHc-gC-gBa">
            <objects>
                <viewController id="9jh-eI-Ht0" customClass="SecondViewController" customModule="FastlaneStudy" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8IQ-1r-z3R">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uE1-cy-bI8">
                                <rect key="frame" x="187.5" y="433" width="39" height="30"/>
                                <state key="normal" title="두번째"/>
                                <connections>
                                    <segue destination="bKh-6p-Ftr" kind="show" id="Xzz-85-f03"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="uE1-cy-bI8" firstAttribute="centerY" secondItem="8IQ-1r-z3R" secondAttribute="centerY" id="KEx-x0-rMt"/>
                            <constraint firstItem="uE1-cy-bI8" firstAttribute="centerX" secondItem="8IQ-1r-z3R" secondAttribute="centerX" id="bam-3k-XJN"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="A15-gX-ZG0"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="eBi-sf-fwz" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1863.7681159420292" y="137.94642857142856"/>
        </scene>
        <!--Third View Controller-->
        <scene sceneID="6Ne-S6-fni">
            <objects>
                <viewController id="bKh-6p-Ftr" customClass="ThirdViewController" customModule="FastlaneStudy" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Fo4-hG-Rc9">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mye-Z0-Teg">
                                <rect key="frame" x="187.5" y="433" width="39" height="30"/>
                                <state key="normal" title="세번째"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Mye-Z0-Teg" firstAttribute="centerY" secondItem="Fo4-hG-Rc9" secondAttribute="centerY" id="Otp-Q2-tvQ"/>
                            <constraint firstItem="Mye-Z0-Teg" firstAttribute="centerX" secondItem="Fo4-hG-Rc9" secondAttribute="centerX" id="W82-gH-7nA"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Xwc-J3-X1p"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zXK-Eh-dVu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2671.0144927536235" y="137.94642857142856"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="HbM-BK-xqa">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZjN-z1-rtd" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IyR-TG-NWO">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="GVB-cb-HTJ"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="yLQ-NJ-YDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="167" y="138"/>
        </scene>
    </scenes>
</document>
